--- a/package.json
+++ b/package.json
@@ -5,13 +5,26 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "webpack server --config webpack.dev.js"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
+    "@meforma/vue-toaster": "^1.3.0",
+    "axios": "^0.26.1",
+    "buffer": "^6.0.3",
     "core-js": "^3.8.3",
+    "emoji-mart-vue-fast": "^10.2.1",
+    "loadash": "^1.0.0",
+    "roboto-fontface": "*",
+    "socket.io-client": "^4.4.1",
+    "style-loader": "^3.3.1",
+    "uuid": "^8.3.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "webfontloader": "^1.0.0",
+    "webpack-dev-server": "^4.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -21,14 +34,20 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "fibers": "^5.0.1",
     "lint-staged": "^11.1.2",
+    "node-sass": "^7.0.1",
     "prettier": "^2.4.1",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "svg-sprite-loader": "^6.0.11",
+    "vue-style-loader": "^4.1.3",
+    "webpack-cli": "^4.9.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
